Fix overflow for firefox

--- a/views/_layout.sass
+++ b/views/_layout.sass
@@ -102,6 +102,7 @@ body
     padding: 20px
     overflow: auto
     section.welcome
+      overflow: auto
       article, aside
         float: left
       article
